@@ -1,6 +1,7 @@
 from .cmf_catalog_aware import PatchCMFCatalogAware
 from .cmf_catalog_aware import PatchCMFCatalogAwareHandlers
 from .default_values import PatchBuilderCreate
+from .default_values import PatchDeserializeFromJson
 from .default_values import PatchDexterityContentGetattr
 from .default_values import PatchDexterityDefaultAddForm
 from .default_values import PatchDXCreateContentInContainer
@@ -8,7 +9,7 @@ from .default_values import PatchInvokeFactory
 from .default_values import PatchTransmogrifyDXSchemaUpdater
 from .default_values import PatchZ3CFormChangedField
 from .default_values import PatchZ3CFormWidgetUpdate
-from .default_values import PatchDeserializeFromJson
+from .exception_formatter import PatchExceptionFormatter
 from .filter_trashed_from_catalog import PatchCatalogToFilterTrashedDocs
 from .history_handler_tool import PatchCMFEditonsHistoryHandlerTool
 from .ldap_userfolder_encoding import PatchLDAPUserFolderEncoding
@@ -17,8 +18,8 @@ from .paste_permission import PatchDXContainerPastePermission
 from .plone_43rc1_upgrade import PatchPlone43RC1Upgrade
 from .resource_registries_url_regex import PatchResourceRegistriesURLRegex
 from .rolemanager import PatchOFSRoleManager
-from .uuidindex import PatchUUIDIndex
 from .tz_for_log import PatchZ2LogTimezone
+from .uuidindex import PatchUUIDIndex
 from .verify_object_paste import PatchCopyContainerVerifyObjectPaste
 from .webdav_lock_timeout import PatchWebDAVLockTimeout
 
@@ -46,3 +47,4 @@ PatchDeserializeFromJson()()
 PatchCMFCatalogAware()()
 PatchOFSRoleManager()()
 PatchCMFCatalogAwareHandlers()()
+PatchExceptionFormatter()()
